--- a/style/main.css
+++ b/style/main.css
@@ -246,14 +246,14 @@ hr {
 }
 
 .aboutImg {
-    background-image: url(/img/about-us.jpg);
+    background-image: url(img/about-us.jpg);
     background-size: cover;
     height: 444px;
     margin: 15px 15px 15px 0
 }
 
 .digiImg {
-    background-image: url(/img/digital.jpg);
+    background-image: url(img/digital.jpg);
     background-size: cover;
     background-position: center;
 
@@ -261,7 +261,7 @@ hr {
 }
 
 .markImg {
-    background-image: url(/img/marketing.jpg);
+    background-image: url(img/marketing.jpg);
     background-size: cover;
     background-position: center;
 
