--- a/style/main.css
+++ b/style/main.css
@@ -246,7 +246,7 @@ hr {
 }
 
 .aboutImg {
-    background-image: url(/img/about-us.jpg);
+    background-image: url(mtm6201-final/img/about-us.jpg);
     background-size: cover;
     height: 444px;
     margin: 15px 15px 15px 0
